Workflow system is tested. Fixed an issue - json turned out to not be a good payload mechanism due to not preserving type.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "torch>=1.9.0",
     "numpy>=1.21.0",
     "toml>=0.10.0",
+    "msgpack>=1.0.0"
 ]
 
 [project.optional-dependencies]
