--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "workflow-forge"
-version = "0.1.5"
+version = "0.1.8"
 description = "AI models that control their own prompt feeds"
 readme = "README.md"
 license = {text = "MIT"}
@@ -33,12 +33,12 @@ dependencies = [
     "numpy>=1.21.0",
     "toml>=0.10.0",
     "msgpack>=1.0.0",
-    "plotly"
 ]
 
 [project.optional-dependencies]
 dev = [
     "coverage>=7.0.0",
+    "igraph"
 ]
 
 [project.urls]
