--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,9 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "coverage>=7.0.0",
-    "igraph"
+    "igraph",
+    "networkx",
+    "plotly"
 ]
 
 [project.urls]
